--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ body {
     position: relative;
 }
 
-/* CARD */
+/**************** CARD ****************/
 .card {
     background-color: var(--dark-blue);
     width: 420px;
@@ -35,15 +35,21 @@ body {
     margin: auto;
     padding: 35px;
     border-radius: 35px;
+    /* position: absolute;
+    left: calc(50% - 210px);
+    z-index: 1; */
     /* box-shadow: 15px 20px 15px var(--very-dark-blue); */
 }
 
-/* CARD FEEDBACK */
+/**************** CARD FEEDBACK ****************/
 .card_feedback {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     /* align-items: flex-start; */
+}
+
+.card_feedback.hidden {
     display: none;
 }
 
@@ -72,33 +78,46 @@ body {
     line-height: 1.6;
 }
 
-.rating_stars ul {
+/* .rating_stars .star-items */
+.rating_stars .star-items {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px 0;
 }
 
-.rating_stars ul li {
+/* .rating_stars .star-items .star */
+.rating_stars .star-items .star {
     background-color: rgba(124, 135, 152, 0.247);
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    padding-top: 4px;
     display: flex;
     align-items: center;
     justify-content: center;
     color: var(--light-grey);
     font-size: 16px;
+    font-weight: 700;
 }
 
-.rating_stars ul li:hover {
+/* .rating_stars .star-items .star:hover */
+.rating_stars .star-items .star:hover {
     background-color: var(--orange);
     color: var(--white);
     cursor: pointer;
 }
 
-.rating_stars ul li:active {
+/* .rating_stars .star-items .star:active */
+.rating_stars .star-items .star:active {
     background-color: var(--medium-grey);
+    color: var(--white);
+}
+
+/* .rating_stars .star-items .star.active */
+.rating_stars .star-items .star.active {
+    background-color: var(--medium-grey);
+    color: var(--white);
 }
 
 .submit {
@@ -119,7 +138,7 @@ body {
     cursor: pointer;
 }
 
-/* CARD RESULT */
+/**************** CARD RESULT ****************/
 .card_result {
     display: flex;
     flex-direction: column;
@@ -127,7 +146,11 @@ body {
     align-items: center;
     padding: 40px;
     gap: 20px;
-    /* display: none; */
+}
+
+.card_result.hidden {
+    display: none;
+
 }
 
 .result_star {
